[gd_scene load_steps=5 format=3 uid="uid://cqptehqam222o"]

[ext_resource type="Script" uid="uid://bvtiy2gkb3e7r" path="res://scenes/charactermanagement/character_management.gd" id="1_2awu7"]
[ext_resource type="Texture2D" uid="uid://cl6itc3p3b882" path="res://assets/sprites/draft_resources/wizard.png" id="2_64re8"]
[ext_resource type="Texture2D" uid="uid://cxmwxlh1h4cpj" path="res://assets/sprites/draft_resources/hpbarbar (3).png" id="3_3488a"]
[ext_resource type="Texture2D" uid="uid://dteht03tawf1e" path="res://assets/sprites/draft_resources/hpbarbar (22).png" id="4_mu5bu"]

[node name="CharacterManagement" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2awu7")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.342894, 0.185136, 0.143227, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="lblCharMgmt" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CHARACTER MANAGEMENT"
horizontal_alignment = 1

[node name="hbcMainSegments" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="vbcLeftSeg" type="VBoxContainer" parent="Background/VBoxContainer/hbcMainSegments"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lblCharName" type="Label" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg"]
layout_mode = 2
size_flags_vertical = 0
text = "CharacterName"
horizontal_alignment = 1

[node name="trCharPortrait" type="TextureRect" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("2_64re8")
stretch_mode = 2

[node name="lblCurrHP" type="Label" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg"]
layout_mode = 2
text = "HP: 6/10"
horizontal_alignment = 1

[node name="txProgBarCurrHP" type="TextureProgressBar" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg"]
layout_mode = 2
size_flags_horizontal = 4
max_value = 10.0
value = 6.0
texture_under = ExtResource("3_3488a")
texture_progress = ExtResource("4_mu5bu")
tint_progress = Color(1, 0.701333, 0.36, 1)

[node name="lblEquipment" type="Label" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "--- EQUIPMENT ---
"

[node name="vbcEquipment" type="VBoxContainer" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Weapon" type="HBoxContainer" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment"]
layout_mode = 2

[node name="lblWeapon" type="Label" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Weapon"]
layout_mode = 2
text = "Weapon:"

[node name="mbtnWeapon" type="MenuButton" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Weapon"]
layout_mode = 2
size_flags_horizontal = 3
text = "CurrWeapon"
flat = false

[node name="Armor" type="HBoxContainer" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment"]
layout_mode = 2

[node name="lblArmor" type="Label" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Armor"]
layout_mode = 2
text = "Armor:"

[node name="mbtnArmor" type="MenuButton" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Armor"]
layout_mode = 2
size_flags_horizontal = 3
text = "CurrArmor"
flat = false

[node name="Accessory" type="HBoxContainer" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment"]
layout_mode = 2

[node name="lblAccessory" type="Label" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Accessory"]
layout_mode = 2
text = "Accessory: "

[node name="mbtnAccessory" type="MenuButton" parent="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Accessory"]
layout_mode = 2
text = "CurrAccessory"
flat = false

[node name="vbcMidSeg" type="VBoxContainer" parent="Background/VBoxContainer/hbcMainSegments"]
layout_mode = 2
size_flags_horizontal = 6

[node name="lblCharStats" type="Label" parent="Background/VBoxContainer/hbcMainSegments/vbcMidSeg"]
layout_mode = 2
text = "Character Stats"

[node name="CharStats" type="HBoxContainer" parent="Background/VBoxContainer/hbcMainSegments/vbcMidSeg"]
layout_mode = 2

[node name="txtStatLabels" type="RichTextLabel" parent="Background/VBoxContainer/hbcMainSegments/vbcMidSeg/CharStats"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Level:
Money
XP:
Str: 
Dex:
Con:
Int:
Wis:
Cha:
Acc:
Dmg:
Evade:
Block:"
fit_content = true
horizontal_alignment = 2

[node name="txtStatValues" type="RichTextLabel" parent="Background/VBoxContainer/hbcMainSegments/vbcMidSeg/CharStats"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "1
10
0
3
3
3
3
6
6
7
7
1
1"
fit_content = true

[node name="lblItemSlots" type="Label" parent="Background/VBoxContainer/hbcMainSegments/vbcMidSeg"]
layout_mode = 2
size_flags_vertical = 0
text = "Item Slots:"

[node name="vbItemSlots" type="VBoxContainer" parent="Background/VBoxContainer/hbcMainSegments/vbcMidSeg"]
layout_mode = 2
size_flags_vertical = 2

[node name="vbcRightSeg" type="VBoxContainer" parent="Background/VBoxContainer/hbcMainSegments"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btnRest" type="Button" parent="Background/VBoxContainer/hbcMainSegments/vbcRightSeg"]
layout_mode = 2
size_flags_horizontal = 4
text = "Rest (pay cost)"

[node name="lblAbilities" type="Label" parent="Background/VBoxContainer/hbcMainSegments/vbcRightSeg"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
text = "[--Abilities--]
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ilAbilities" type="ItemList" parent="Background/VBoxContainer/hbcMainSegments/vbcRightSeg"]
layout_mode = 2
size_flags_horizontal = 4
auto_width = true
auto_height = true
item_count = 2
item_0/text = "testiitem1"
item_1/text = "testitem2"

[node name="lblAbilDesc" type="Label" parent="Background/VBoxContainer/hbcMainSegments/vbcRightSeg"]
layout_mode = 2
text = "--ABILITY DESCRIPTION--"
horizontal_alignment = 1

[node name="rtlAbilDesc" type="RichTextLabel" parent="Background/VBoxContainer/hbcMainSegments/vbcRightSeg"]
layout_mode = 2
size_flags_vertical = 3
text = "ability desc"
fit_content = true

[node name="btnViewNextBattle" type="Button" parent="Background/VBoxContainer/hbcMainSegments/vbcRightSeg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "VIEW NEXT BATTLE
"

[node name="PointerFollower" type="CharacterBody2D" parent="."]

[connection signal="about_to_popup" from="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Weapon/mbtnWeapon" to="." method="_on_mbtn_weapon_about_to_popup"]
[connection signal="mouse_entered" from="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Weapon/mbtnWeapon" to="." method="_on_mbtn_weapon_mouse_entered"]
[connection signal="mouse_exited" from="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Weapon/mbtnWeapon" to="." method="_on_mbtn_weapon_mouse_exited"]
[connection signal="about_to_popup" from="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Armor/mbtnArmor" to="." method="_on_mbtn_armor_about_to_popup"]
[connection signal="mouse_entered" from="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Armor/mbtnArmor" to="." method="_on_mbtn_armor_mouse_entered"]
[connection signal="mouse_exited" from="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Armor/mbtnArmor" to="." method="_on_mbtn_armor_mouse_exited"]
[connection signal="about_to_popup" from="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Accessory/mbtnAccessory" to="." method="_on_mbtn_accessory_about_to_popup"]
[connection signal="mouse_entered" from="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Accessory/mbtnAccessory" to="." method="_on_mbtn_accessory_mouse_entered"]
[connection signal="mouse_exited" from="Background/VBoxContainer/hbcMainSegments/vbcLeftSeg/vbcEquipment/Accessory/mbtnAccessory" to="." method="_on_mbtn_accessory_mouse_exited"]
[connection signal="item_clicked" from="Background/VBoxContainer/hbcMainSegments/vbcRightSeg/ilAbilities" to="." method="_on_il_abilities_item_clicked"]
[connection signal="pressed" from="Background/VBoxContainer/hbcMainSegments/vbcRightSeg/btnViewNextBattle" to="." method="_on_btn_view_next_battle_pressed"]
